# chat-application

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py
client/: CMakeLists.txt  main.cc
server/: CMakeLists.txt  main.cc
shared/: CMakeLists.txt
shared/encryption/: CMakeLists.txt  encryption.cc
shared/encryption/include/: encryption.hh
shared/generate_key/: CMakeLists.txt  generate_key.cc
shared/generate_key/include/: generate_key.hh
